# fluc_recommenders

./: README.md  app.py  pyproject.toml
recommenders/: app.py
recommenders/routers/: routes.py
recommenders/services/: inference.py  prediction.py
